# open-cadre

./: .gitignore  CLAUDE.md  LICENSE  README.md  cadre.example.yml  pyproject.toml
.github/workflows/: ci.yml
src/cadre/: __init__.py  cli.py  config.py  detect.py  errors.py  explore.py  init.py  keys.py
src/cadre/agents/: __init__.py  base.py  loop.py  manager.py  router.py  session.py
src/cadre/agents/presets/: __init__.py  analytics_engineer.py  backend.py  context.py  data_architect.py  frontend.py  qa.py  qa_engineer.py  solo.py  team_lead.py
src/cadre/benchmarks/: __init__.py  data.py  models.json
src/cadre/orchestrator/: __init__.py  router.py  session.py  team.py
src/cadre/presets/: __init__.py  architect.md  engineer.md  lead.md  qa.md  solo.md
src/cadre/providers/: __init__.py  base.py  litellm_provider.py  registry.py
src/cadre/templates/agents/: architect.md.j2  engineer.md.j2  lead.md.j2  qa.md.j2  solo.md.j2
src/cadre/templates/context/: bigquery.md.j2  redshift.md.j2  snowflake.md.j2
src/cadre/tools/: __init__.py  base.py  dbt.py  file_ops.py  git.py  messaging.py  search.py  shell.py  team_management.py
src/cadre/tui/: __init__.py  app.py  bridge.py  commands.py
src/cadre/ui/: __init__.py  app.py  chat.py  logo.py  status.py
src/cadre/workflows/: __init__.py  engine.py  types.py
tests/: conftest.py  test_agents.py  test_cli.py  test_config.py  test_detect.py  test_errors.py  test_keys.py  test_messaging.py  test_providers.py  test_router.py  test_session.py  test_team_management.py  test_tools.py  test_workflows.py
(+28 files in other folders)
